--- a/src/app/modules/LeaveManagement/emp-leave/emp-leave.component.html
+++ b/src/app/modules/LeaveManagement/emp-leave/emp-leave.component.html
@@ -1,6 +1,6 @@
 <div>
     <div style="padding:15px 15px 0px 15px;">
-        <div><strong>Grade Components</strong></div>
+        <div><strong>Grade Leaves</strong></div>
     </div>
     <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
     <alert></alert>
@@ -9,46 +9,32 @@
             <form [formGroup]="searchForm">
                 <mat-form-field appearance="outline">
                     <mat-label>Grade</mat-label>
-                    <mat-select formControlName="searchGradeId">
-                        <mat-option *ngFor="let item of Grades" [value]="item.MasterDataId">
+                    <mat-select formControlName="searchLeaveId">
+                        <mat-option *ngFor="let item of Leaves" [value]="item.MasterDataId">
                             {{item.MasterDataName}}
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
-                <button [disabled]="loading" class="mat-raised-button" (click)="GetGradeComponents()">
+                <button [disabled]="loading" class="mat-raised-button" (click)="GetEmpLeave()">
                     <mat-icon>search</mat-icon>
                 </button>
             </form>
-
             <mat-table #table [dataSource]="dataSource">
-                <ng-container matColumnDef="SalaryComponent">
-                    <mat-header-cell *matHeaderCellDef>Salary Components
+                
+                <ng-container matColumnDef="Leave">
+                    <mat-header-cell *matHeaderCellDef>Leave
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element ">
-                        {{element.SalaryComponent}}
-        
+                        {{element.Leave}}
                     </mat-cell>
                 </ng-container>
-                <ng-container matColumnDef="ComponentTypeId">
-                    <mat-header-cell *matHeaderCellDef>Component Type
+                <ng-container matColumnDef="NoOfDays">
+                    <mat-header-cell *matHeaderCellDef>No. Of Days
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element ">
-                        <mat-form-field>
-                            <mat-select [(value)]="element.ComponentTypeId" [(ngModel)]="element.ComponentTypeId">
-                                <mat-option *ngFor="let item of ComponentTypes" [value]="item.MasterDataId">
-                                    {{item.MasterDataName}}</mat-option>
-                            </mat-select>
-                        </mat-form-field>
-                    </mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="FormulaOrAmount">
-                    <mat-header-cell *matHeaderCellDef>PerCent/Amount
-                    </mat-header-cell>
-                    <mat-cell *matCellDef="let element ">
-                        <mat-form-field [style.width.px]="350">
-                            <textarea matInput 
-                            [(value)]="element.FormulaOrAmount"
-                                [(ngModel)]="element.FormulaOrAmount"></textarea>
+                        <mat-form-field [style.width.px]="100" appearance="outline">
+                            <input type="number" matInput autocomplete="Off" [(value)]="element.NoOfDays"
+                                [(ngModel)]="element.NoOfDays">
                         </mat-form-field>
                     </mat-cell>
                 </ng-container>
