--- a/src/app/modules/StudentSubject/subjectdashboard/subjectdashboard.component.html
+++ b/src/app/modules/StudentSubject/subjectdashboard/subjectdashboard.component.html
@@ -14,6 +14,12 @@
     </mat-tab>
     <mat-tab>
         <ng-template mat-tab-label>
+            <mat-icon>info</mat-icon>Class Master
+        </ng-template>
+        <app-classsubjectteacherdashboard></app-classsubjectteacherdashboard>
+    </mat-tab>
+    <mat-tab>
+        <ng-template mat-tab-label>
             <mat-icon>info</mat-icon>Subject Mark Components
         </ng-template>
         <app-student-subject-mark-comp></app-student-subject-mark-comp>
