--- a/src/app/modules/EmployeeManagement/employee-salary-component/employee-salary-component.component.html
+++ b/src/app/modules/EmployeeManagement/employee-salary-component/employee-salary-component.component.html
@@ -16,30 +16,42 @@
                         </mat-option>
                     </mat-autocomplete>
                 </mat-form-field>
+                <mat-form-field [style.width.px]="80">
+                    <mat-label>Month</mat-label>
+                    <mat-select formControlName='searchMonth'>
+                        <mat-option [value]="0">select</mat-option>
+                        <mat-option *ngFor="let item of Months" [value]="item.val">{{item.month}}</mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <mat-form-field [style.width.px]="50">
+                    <mat-label>Year</mat-label>
+                    <input type="number" matInput formControlName="searchYear" min="2020" max="2050" autocomplete="Off">
+                </mat-form-field>
                 <button [disabled]="loading" class="mat-raised-button" (click)="GetEmployeeSalaryComponents()">
                     <mat-icon>search</mat-icon>
                 </button>
             </form>
+
             <mat-table #table [dataSource]="dataSource">
                 <ng-container matColumnDef="Grade">
                     <mat-header-cell *matHeaderCellDef>Grade
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element ">
-                        {{element.Grade}}        
+                        {{element.Grade}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="SalaryComponent">
                     <mat-header-cell *matHeaderCellDef>Salary Components
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element ">
-                        {{element.SalaryComponent}}        
+                        {{element.SalaryComponent}}
                     </mat-cell>
-                </ng-container>                
-                <ng-container matColumnDef="DisplayFormulaOrAmount">
-                    <mat-header-cell *matHeaderCellDef>Grade Formula/Amount
+                </ng-container>
+                <ng-container matColumnDef="FormulaOrAmount">
+                    <mat-header-cell *matHeaderCellDef>Formula/Amount
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element ">
-                       {{element.DisplayFormulaOrAmount}}
+                        {{element.FormulaOrAmount}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="ActualFormulaOrAmount">
@@ -47,8 +59,8 @@
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element ">
                         <mat-form-field [style.width.pc]="20">
-                            <textarea matInput [attr.name]='element.ActualFormulaOrAmount' (blur)="onBlur(element,$event)"
-                            [(value)]="element.ActualFormulaOrAmount"
+                            <textarea rows="1" matInput [attr.name]='element.ActualFormulaOrAmount'
+                                (blur)="onBlur(element,$event)" [(value)]="element.ActualFormulaOrAmount"
                                 [(ngModel)]="element.ActualFormulaOrAmount"></textarea>
                         </mat-form-field>
                     </mat-cell>
@@ -75,7 +87,7 @@
                         </button> -->
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                        <button [disabled]="loading" matTooltip="save" mat-mini-fab (click)="UpdateOrSave(element)">
+                        <button [disabled]="loading || !element.Action" matTooltip="save" mat-mini-fab (click)="UpdateOrSave(element)">
                             <mat-icon>save</mat-icon>
                         </button>
                     </mat-cell>
@@ -84,6 +96,11 @@
                 <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
             </mat-table>
         </div>
-
+        <div style="background-color: lightgray;line-height: 30px;padding: 10px;">Below variable name can be used for calculation</div>
+        <div style="column-count: 4;">
+            <div *ngFor="let item of EmployeeVariables;let i =index">
+                <div>{{ item}}</div>
+            </div>
+        </div>
     </div>
 </div>
