--- a/src/app/modules/StudentSubject/classsubjectmapping/classsubjectdashboard.component.html
+++ b/src/app/modules/StudentSubject/classsubjectmapping/classsubjectdashboard.component.html
@@ -4,16 +4,7 @@
     <mat-card-content>
         <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
         <alert></alert>
-        <form [formGroup]="searchForm">
-            <!-- <mat-form-field appearance="outline">
-                <mat-label>Batch</mat-label>
-                <mat-select formControlName="searchBatchId">
-                    <mat-option value="0">--select--</mat-option>
-                    <mat-option *ngFor="let item of Batches" [value]="item.MasterDataId">
-                        {{item.MasterDataName}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field> -->
+        <form [formGroup]="searchForm">       
             <mat-form-field appearance="outline">
                 <mat-label>Class</mat-label>
                 <mat-select formControlName="searchClassId">
@@ -39,20 +30,20 @@
             <!-- <button [disabled]="loading" matTooltip="clear all" class="mat-raised-button" (click)="clear()">
                 <mat-icon>clear_all</mat-icon>
             </button> -->
-        </form>
-        <mat-table #table [dataSource]="dataSource">            
-            <ng-container matColumnDef="ClassSubjectId">
+        </form>    
+        <mat-table #table [dataSource]="dataSource">
+            <!-- <ng-container matColumnDef="ClassSubjectId">
                 <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Id
                 </mat-header-cell>
                 <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
                     {{element.ClassSubjectId}}                    
                 </mat-cell>
-            </ng-container>
+            </ng-container> -->
             <ng-container matColumnDef="ClassName">
                 <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Class/stream
                 </mat-header-cell>
                 <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
-                    {{element.ClassName}}                    
+                    {{element.ClassName}}
                 </mat-cell>
             </ng-container>
             <ng-container matColumnDef="SubjectName">
@@ -64,18 +55,21 @@
             <ng-container matColumnDef="SubjectTypeId">
                 <mat-header-cell *matHeaderCellDef> Subject Type </mat-header-cell>
                 <mat-cell *matCellDef="let element">
-                   <mat-form-field>
-                       <mat-label>subject type</mat-label>
-                       <mat-select (selectionChange)="updateSelectHowMany(element)" [(value)]="element.SubjectTypeId" [(ngModel)]="element.SubjectTypeId">
-                        <mat-option *ngFor="let item of SubjectTypes" [value]="item.SubjectTypeId">{{item.SubjectTypeName}}</mat-option>
-                       </mat-select>
-                   </mat-form-field>
+                    <mat-form-field>
+                        <mat-label>subject type</mat-label>
+                        <mat-select (selectionChange)="updateSelectHowMany(element)" [(value)]="element.SubjectTypeId"
+                            [(ngModel)]="element.SubjectTypeId">
+                            <mat-option *ngFor="let item of SubjectTypes" [value]="item.SubjectTypeId">
+                                {{item.SubjectTypeName}}</mat-option>
+                        </mat-select>
+                    </mat-form-field>
                 </mat-cell>
-            </ng-container>
+            </ng-container>           
             <ng-container matColumnDef="Active">
                 <mat-header-cell *matHeaderCellDef> Active </mat-header-cell>
                 <mat-cell *matCellDef="let element">
-                    <mat-checkbox (click)="$event.stopPropagation()" (change)="updateActive(element,$event)" [checked]="element.Active==1?true:false">
+                    <mat-checkbox (click)="$event.stopPropagation()" (change)="updateActive(element,$event)"
+                        [checked]="element.Active==1?true:false">
                     </mat-checkbox>
                 </mat-cell>
             </ng-container>
@@ -83,7 +77,8 @@
                 <mat-header-cell *matHeaderCellDef>
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                    <button [disabled]="loading || CheckPermission=='read'" matTooltip="save" mat-mini-fab (click)="UpdateOrSave(element)">
+                    <button [disabled]="loading || CheckPermission=='read'" matTooltip="save" mat-mini-fab
+                        (click)="UpdateOrSave(element)">
                         <mat-icon>save</mat-icon>
                     </button>
 
@@ -92,5 +87,6 @@
             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
             <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
         </mat-table>
+    
     </mat-card-content>
 </mat-card>
