--- a/src/app/modules/StudentSubject/subjectdashboard/subjectdashboard.component.html
+++ b/src/app/modules/StudentSubject/subjectdashboard/subjectdashboard.component.html
@@ -16,7 +16,13 @@
         <ng-template mat-tab-label>
             <mat-icon>info</mat-icon>Class Master
         </ng-template>
-        <app-classsubjectteacherdashboard></app-classsubjectteacherdashboard>
+        <app-classmasterdashboard></app-classmasterdashboard>
+    </mat-tab>
+    <mat-tab>
+        <ng-template mat-tab-label>
+            <mat-icon>info</mat-icon>Class Subject Teacher
+        </ng-template>
+        <app-classsubjectteacher></app-classsubjectteacher>
     </mat-tab>
     <mat-tab>
         <ng-template mat-tab-label>
