--- a/src/app/modules/StudentSubject/subjectdashboard/subjectdashboard.component.html
+++ b/src/app/modules/StudentSubject/subjectdashboard/subjectdashboard.component.html
@@ -8,7 +8,7 @@
     </mat-tab>
     <mat-tab>
         <ng-template mat-tab-label>
-            <mat-icon>info</mat-icon>Class Subject
+            <mat-icon>info</mat-icon>Class Subject Teacher
         </ng-template>
         <app-classsubjectdashboard></app-classsubjectdashboard>
     </mat-tab>
@@ -18,12 +18,12 @@
         </ng-template>
         <app-classmasterdashboard></app-classmasterdashboard>
     </mat-tab>
-    <mat-tab>
+    <!-- <mat-tab>
         <ng-template mat-tab-label>
             <mat-icon>info</mat-icon>Class Subject Teacher
         </ng-template>
         <app-classsubjectteacher></app-classsubjectteacher>
-    </mat-tab>
+    </mat-tab> -->
     <mat-tab>
         <ng-template mat-tab-label>
             <mat-icon>info</mat-icon>Subject Mark Components
