--- a/src/app/modules/StudentSubject/classsubjectmapping/classsubjectdashboard.component.html
+++ b/src/app/modules/StudentSubject/classsubjectmapping/classsubjectdashboard.component.html
@@ -14,31 +14,11 @@
                     </mat-option>
                 </mat-select>
             </mat-form-field>
-            <!-- <mat-form-field appearance="outline">
-                <mat-label>Subject</mat-label>
-                <mat-select formControlName="searchSubjectId">
-                    <mat-option value="0">--select--</mat-option>
-                    <mat-option *ngFor="let item of Subjects" [value]="item.MasterDataId">
-                        {{item.MasterDataName}}
-
-                    </mat-option>
-                </mat-select>
-            </mat-form-field> -->
             <button [disabled]="loading" class="mat-raised-button" (click)="GetClassSubject()">
                 <mat-icon>search</mat-icon>
             </button>
-            <!-- <button [disabled]="loading" matTooltip="clear all" class="mat-raised-button" (click)="clear()">
-                <mat-icon>clear_all</mat-icon>
-            </button> -->
         </form>    
         <mat-table #table [dataSource]="dataSource">
-            <!-- <ng-container matColumnDef="ClassSubjectId">
-                <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Id
-                </mat-header-cell>
-                <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
-                    {{element.ClassSubjectId}}                    
-                </mat-cell>
-            </ng-container> -->
             <ng-container matColumnDef="ClassName">
                 <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Class/stream
                 </mat-header-cell>
@@ -64,6 +44,21 @@
                         </mat-select>
                     </mat-form-field>
                 </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="TeacherId">
+                <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Teacher
+                </mat-header-cell>
+                <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
+                    <mat-form-field [style.width.pc]="25">
+                        <mat-label>Teacher</mat-label>
+                        <mat-select (selectionChange)="onBlur(element)" [(ngModel)]="element.TeacherId" [(value)]="element.TeacherId">
+                            <mat-option [value]="0">select</mat-option>
+                            <mat-option *ngFor="let option of Teachers" [value]="option.TeacherId">
+                                {{option.TeacherName}}
+                            </mat-option>
+                            </mat-select>
+                    </mat-form-field>
+                </mat-cell>
             </ng-container>           
             <ng-container matColumnDef="Active">
                 <mat-header-cell *matHeaderCellDef> Active </mat-header-cell>
@@ -77,7 +72,7 @@
                 <mat-header-cell *matHeaderCellDef>
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                    <button [disabled]="loading || CheckPermission=='read'" matTooltip="save" mat-mini-fab
+                    <button [disabled]="loading || !element.Action || CheckPermission=='read'" matTooltip="save" mat-mini-fab
                         (click)="UpdateOrSave(element)">
                         <mat-icon>save</mat-icon>
                     </button>
