--- a/src/app/modules/StudentSubject/classsubjectteacher/classsubjectteacher.component.html
+++ b/src/app/modules/StudentSubject/classsubjectteacher/classsubjectteacher.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-    <mat-card-title>Class Master</mat-card-title>
+    <mat-card-title>Class Subject Teacher</mat-card-title>
     <mat-card-subtitle>&nbsp;</mat-card-subtitle>
     <mat-card-content>
         <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
@@ -8,6 +8,7 @@
             <mat-form-field>
                 <mat-label>Class</mat-label>
                 <mat-select formControlName="searchClassId">
+                    <mat-option [value]="0">select</mat-option>
                     <mat-option *ngFor="let item of Classes" [value]="item.MasterDataId">
                         {{item.MasterDataName}}</mat-option>
                 </mat-select>
@@ -20,7 +21,7 @@
                         {{option.TeacherName}}
                     </mat-option>
                 </mat-autocomplete>
-            </mat-form-field>            
+            </mat-form-field>
             <button [disabled]="loading" class="mat-raised-button" (click)="GetClassSubjectTeacher()">
                 <mat-icon>search</mat-icon>
             </button>
@@ -36,11 +37,18 @@
                     {{element.ClassSubjectId}}                    
                 </mat-cell>
             </ng-container> -->
-            <ng-container matColumnDef="Teacher">
+            <ng-container matColumnDef="TeacherId">
                 <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Teacher
                 </mat-header-cell>
                 <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
-                    {{element.Teacher}}
+                    <mat-form-field [style.width.pc]="25">
+                        <mat-label>Teacher</mat-label>
+                        <mat-select (selectionChange)="onBlur(element)" [(ngModel)]="element.TeacherId">
+                            <mat-option *ngFor="let option of Teachers" [value]="option.TeacherId">
+                                {{option.TeacherName}}
+                            </mat-option>
+                            </mat-select>
+                    </mat-form-field>
                 </mat-cell>
             </ng-container>
             <ng-container matColumnDef="ClassSubject">
@@ -48,13 +56,14 @@
                 <mat-cell *matCellDef="let element">
                     <mat-form-field>
                         <mat-label>Class</mat-label>
-                        <mat-select (selectionChange)="onBlur(element)" [(value)]="element.ClassSubjectId" [(ngModel)]="element.ClassSubjectId">
+                        <mat-select (selectionChange)="onBlur(element)" [(value)]="element.ClassSubjectId"
+                            [(ngModel)]="element.ClassSubjectId">
                             <mat-option *ngFor="let item of ClassSubjects" [value]="item.ClassSubjectId">
                                 {{item.ClassSubject}}</mat-option>
                         </mat-select>
                     </mat-form-field>
                 </mat-cell>
-            </ng-container>            
+            </ng-container>
             <ng-container matColumnDef="Active">
                 <mat-header-cell *matHeaderCellDef> Active </mat-header-cell>
                 <mat-cell *matCellDef="let element">
@@ -71,8 +80,8 @@
                     </button> -->
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                    <button [disabled]="loading || CheckPermission=='read' || !element.Action" matTooltip="save" mat-mini-fab
-                        (click)="UpdateOrSave(element)">
+                    <button [disabled]="loading || CheckPermission=='read' || !element.Action" matTooltip="save"
+                        mat-mini-fab (click)="UpdateOrSave(element)">
                         <mat-icon>save</mat-icon>
                     </button>
 
