--- a/src/app/modules/define-pages/displaypage/displaypage.component.scss
+++ b/src/app/modules/define-pages/displaypage/displaypage.component.scss
@@ -18,9 +18,18 @@ mat-card-title {
 .clickable:hover {
     background-color: var(--maincolor1);
 }
-.pcontent{
+
+.pcontent {
     z-index: 999;
+
 }
+
+.pcontent>p {
+    :hover {
+        color: var(--mainTitleColor);
+    }
+}
+
 .contentbody {
     //border-top-left-radius: 1em;
     margin-top      : 16px;
@@ -64,7 +73,8 @@ mat-card-title {
 
 @media only screen and (max-width: 600px) {
     .center {
-        padding:30px 17px 30px 17px;
+        padding: 30px 17px 30px 17px;
+
         p {
             padding: 30px 0px 30px 0px;
         }
@@ -106,7 +116,8 @@ mat-card-title:not(:first-child),
     flex-wrap   : nowrap;
     //overflow-x: hidden;
     clip-path   : inset(0 12% 0 0);
-    z-index: -1;
+    z-index     : -1;
+
     .proto {
         width       : 22%;
         height      : calc(100% - 110px);
